feat(yaskfile): update known-hosts

--- a/kubernetes/main/bootstrap/apps/flux-system.yaml.j2
+++ b/kubernetes/main/bootstrap/apps/flux-system.yaml.j2
@@ -12,3 +12,5 @@ metadata:
 stringData:
   age.agekey: |
     {{ ENV.FLUX_SOPS_PRIVATE_KEY }}
+  known_hosts: |
+    {{ ENV.FLUX_GITHUB_PUBLIC_KEYS | indent(4) }}
