--- a/.taskfiles/bootstrap/resources/wipe-rook-data.yaml.j2
+++ b/.taskfiles/bootstrap/resources/wipe-rook-data.yaml.j2
@@ -1,16 +1,20 @@
+
 ---
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: {{ ENV.JOB }}
-  namespace: {{ ENV.NS }}
+  name: &app wipe-rook-data
+  namespace: default
+  labels:
+    app.kubernetes.io/name: *app
 spec:
-  ttlSecondsAfterFinished: 3600
+  parallelism: {{ ENV.NODES }}
   template:
+    metadata:
+      labels:
+        app.kubernetes.io/name: *app
     spec:
-      automountServiceAccountToken: false
       restartPolicy: Never
-      nodeName: {{ ENV.NODE }}
       containers:
         - name: main
           image: docker.io/library/alpine:latest
@@ -26,3 +30,10 @@ spec:
         - name: host-var
           hostPath:
             path: /var
+      topologySpreadConstraints:
+        - maxSkew: 1
+          labelSelector:
+            matchLabels:
+              app.kubernetes.io/name: *app
+          topologyKey: kubernetes.io/hostname
+          whenUnsatisfiable: DoNotSchedule
