--- a/.taskfiles/bootstrap/resources/wipe-rook-disk.yaml.j2
+++ b/.taskfiles/bootstrap/resources/wipe-rook-disk.yaml.j2
@@ -7,7 +7,7 @@ metadata:
   labels:
     app.kubernetes.io/name: *app
 spec:
-  parallelism: {{ ENV.NODES }}
+  parallelism: {{ ENV.NODE_COUNT }}
   template:
     metadata:
       labels:
