--- a/.taskfiles/bootstrap/resources/wipe-rook.yaml.j2
+++ b/.taskfiles/bootstrap/resources/wipe-rook.yaml.j2
@@ -2,7 +2,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: &app wipe-rook-disk
+  name: &app wipe-rook
   namespace: default
   labels:
     app.kubernetes.io/name: *app
@@ -14,14 +14,26 @@ spec:
         app.kubernetes.io/name: *app
     spec:
       restartPolicy: Never
+      initContainers:
+        - name: data
+          image: docker.io/library/alpine:latest
+          command: ["/bin/sh", "-c"]
+          args: ["rm -rf /mnt/host_var/lib/rook"]
+          volumeMounts:
+            - mountPath: /mnt/host_var
+              name: host-var
+          securityContext:
+            privileged: true
+          resources: {}
       containers:
-        - name: main
+        - name: disk
           image: docker.io/library/alpine:latest
           command: ["/bin/sh", "-c"]
           args:
             - |
               apk add --no-cache device-mapper findutils parted sgdisk util-linux util-linux-misc;
               DISK=$(find /dev/disk/by-id/ -iname "*{{ ENV.MODEL }}*" -not -name "*-part[0-9+]");
+              echo "=== Wiping $DISK ===";
               sgdisk --zap-all $DISK;
               dd if=/dev/zero of="$DISK" bs=1M count=100 oflag=direct;
               blkdiscard $DISK;
@@ -32,6 +44,14 @@ spec:
             - name: host-dev
               mountPath: /dev/disk/by-id
           resources: {}
+      volumes:
+        - name: host-var
+          hostPath:
+            path: /var
+        - name: host-dev
+          hostPath:
+            path: /dev/disk/by-id
+            type: Directory
       topologySpreadConstraints:
         - maxSkew: 1
           labelSelector:
@@ -39,8 +59,3 @@ spec:
               app.kubernetes.io/name: *app
           topologyKey: kubernetes.io/hostname
           whenUnsatisfiable: DoNotSchedule
-      volumes:
-        - name: host-dev
-          hostPath:
-            path: /dev/disk/by-id
-            type: Directory
