feat: update bootstrap

--- a/kubernetes/main/bootstrap/apps/external-secrets.yaml.j2
+++ b/kubernetes/main/bootstrap/apps/external-secrets.yaml.j2
@@ -7,8 +7,8 @@ metadata:
 apiVersion: v1
 kind: Secret
 metadata:
-  name: bitwarden-access-token
+  name: onepassword-connect-secret
   namespace: external-secrets
 stringData:
-  ORG_ID: {{ ENV.BITWARDEN_ORG_ID }}
-  token: {{ ENV.BITWARDEN_KUBERNETES_TOKEN }}
+  1password-credentials.json: {{ ENV.ONEPASSWORD_CREDENTIALS }}
+  token: {{ ENV.ONEPASSWORD_CONNECT_TOKEN }}
