--- a/.taskfiles/bootstrap/resources/wipe-rook.yaml.j2
+++ b/.taskfiles/bootstrap/resources/wipe-rook.yaml.j2
@@ -31,13 +31,13 @@ spec:
           command: ["/bin/sh", "-c"]
           args:
             - |
-              apk add --no-cache device-mapper findutils parted sgdisk util-linux util-linux-misc;
-              DISK=$(find /dev/disk/by-id/ -iname "*{{ ENV.MODEL }}*" -not -name "*-part[0-9+]");
+              apk add --no-cache findutils nvme-cli;
+              echo "Finding {{ ENV.MODEL }}";
+              #DISK=$(find /dev/disk/by-id/ -iname "*{{ ENV.MODEL }}*" -not -name "*-part[0-9+]");
+              DISK="/dev/nvme0n1"
               echo "=== Wiping $DISK ===";
-              sgdisk --zap-all $DISK;
-              dd if=/dev/zero of="$DISK" bs=1M count=100 oflag=direct;
-              blkdiscard $DISK;
-              partprobe $DISK;
+              nvme format --block-size=4096 $DISK --force;
+              nvme format --lbaf=1 $DISK --force;
           securityContext:
             privileged: true
           volumeMounts:
