--- a/kubernetes/utility/bootstrap/templates/resources.yaml.j2
+++ b/kubernetes/utility/bootstrap/templates/resources.yaml.j2
@@ -33,7 +33,8 @@ metadata:
   name: sops-age
   namespace: flux-system
 stringData:
-  age.agekey: {{ ENV.FLUX_SOPS_PRIVATE_KEY | indent(4) }}
+  age.agekey: |
+    {{ ENV.FLUX_SOPS_PRIVATE_KEY | indent(4) }}
 ---
 apiVersion: v1
 kind: Namespace
