--- a/kubernetes/main/bootstrap/templates/resources.yaml.j2
+++ b/kubernetes/main/bootstrap/templates/resources.yaml.j2
@@ -8,7 +8,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: jory.dev-tls
-  namespace: network
+  namespace: cert-manager
   annotations:
     cert-manager.io/alt-names: '*.jory.dev,jory.dev'
     cert-manager.io/certificate-name: jory.dev
