--- a/kubernetes/utility/bootstrap/templates/resources.yaml.j2
+++ b/kubernetes/utility/bootstrap/templates/resources.yaml.j2
@@ -8,7 +8,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: jory.dev-tls
-  namespace: network
+  namespace: cert-manager
   annotations:
     cert-manager.io/alt-names: '*.jory.dev,jory.dev'
     cert-manager.io/certificate-name: jory.dev
@@ -33,7 +33,7 @@ metadata:
 apiVersion: v1
 kind: Secret
 metadata:
-  name: onepassword-connect-secret
+  name: onepassword
   namespace: external-secrets
 stringData:
   1password-credentials.json: {{ ENV.ONEPASSWORD_CREDENTIALS }}
