fix: unlock job

--- a/.taskfiles/volsync/resources/unlock.yaml.j2
+++ b/.taskfiles/volsync/resources/unlock.yaml.j2
@@ -16,7 +16,7 @@ spec:
           args: ["unlock", "--remove-all"]
           envFrom:
             - secretRef:
-                name: {{ ENV.APP }}-volsync-secret
+                name: {{ ENV.APP }}-volsync
           volumeMounts:
             - name: repository
               mountPath: /repository
@@ -26,7 +26,7 @@ spec:
           args: ["unlock", "--remove-all"]
           envFrom:
             - secretRef:
-                name: {{ ENV.APP }}-volsync-r2-secret
+                name: {{ ENV.APP }}-volsync-r2
           resources: {}
       volumes:
         - name: repository
