fix: update pikvm config

--- a/talos/main/machineconfig.yaml.j2
+++ b/talos/main/machineconfig.yaml.j2
@@ -78,7 +78,7 @@ machine:
           miimon: 1000
         dhcp: true
         mtu: 9000
-    nameservers: ["10.69.1.1"]
+    nameservers: ["10.69.1.1", "10.69.2.1"]
     disableSearchDomain: true
   nodeLabels:
     intel.feature.node.kubernetes.io/gpu: true
