--- a/talos/main/machineconfig.yaml.j2
+++ b/talos/main/machineconfig.yaml.j2
@@ -68,17 +68,17 @@ machine:
       validSubnets: ["10.69.1.0/24", "10.69.2.0/24"]
     disableManifestsDirectory: true
   network:
-    interfaces:
-      - interface: bond0
-        bond:
-          deviceSelectors: [{ hardwareAddr: "58:47:ca:7d:*", driver: igc }]
-          mode: 802.3ad
-          xmitHashPolicy: layer3+4
-          lacpRate: fast
-          miimon: 1000
-        dhcp: true
-        mtu: 9000
-    nameservers: ["10.69.1.1", "10.69.2.1"]
+    # interfaces: ##Need this for WoL/vPro
+    #   - interface: bond0
+    #     bond:
+    #       deviceSelectors: [{ hardwareAddr: "58:47:ca:7d:*", driver: igc }]
+    #       mode: 802.3ad
+    #       xmitHashPolicy: layer3+4
+    #       lacpRate: fast
+    #       miimon: 1000
+    #     dhcp: true
+    #     mtu: 9000
+    nameservers: ["10.69.1.1"]
     disableSearchDomain: true
   nodeLabels:
     intel.feature.node.kubernetes.io/gpu: true
