--- a/talos/utility/machineconfig.yaml.j2
+++ b/talos/utility/machineconfig.yaml.j2
@@ -58,6 +58,15 @@ machine:
       validSubnets: ["10.69.1.0/24", "10.69.2.0/24"]
     disableManifestsDirectory: true
   network:
+    interfaces:
+      - # 2.5G
+        deviceSelector:
+          hardwareAddr: 84:47:09:2d:*
+          driver: igc
+        mtu: 9000
+        dhcp: true
+        vip:
+          ip: 10.69.10.102
     nameservers: ["10.69.1.1"]
     disableSearchDomain: true
   nodeLabels:
